<resources>
    <string name="app_name">BitirmeProjesi</string>
    <string name="kayit_ol">KAYIT OL</string>
    <string name="appName">My Apartment</string>
    <string name="giris_yap">GIRIS YAP</string>
    <string name="create_new_account">Yeni Hesap Olustur</string>
    <string name="Username">Kullanici Adi</string>
    <string name="Email">Email</string>
    <string name="password">Parola</string>
    <string name="hesap_olustur">HESAP OLUSTUR</string>
    <string name="login_account">Giris Yapiniz</string>
    <string name="Create_Apartment">Create Apartment</string>
    <string name="Create_new_apartment">Create New Apartment</string>
    <string name="Apartment_name">Your Apartment Name</string>
    <string name="City_name">City Name</string>
    <string name="Adress">Adress</string>
    <string name="Join_Apartment">Join Apartment</string>
    <string name="MyApartments">My Apartments</string>
</resources>
