<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNewApartmentActivity">

    <include layout="@layout/actionbar_app"
        android:id="@+id/action_barApartment" />

    <TextView
        android:id="@+id/txt_cna_ınfo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_below="@id/action_barApartment"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:textSize="20dp"
        android:layout_marginLeft="40dp"
        android:text="Create New Apartment"/>

    <EditText
        android:id="@+id/txtApartmentRegisterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_cna_ınfo1"
        android:hint="@string/Apartment_name"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <EditText
        android:id="@+id/txtCityNameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtApartmentRegisterName"
        android:hint="@string/City_name"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />
    <EditText
        android:id="@+id/txtAdressRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtCityNameRegister"
        android:hint="@string/Adress"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <Button
        android:id="@+id/btnCreateApartment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Create_Apartment"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        />

</RelativeLayout>