<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:background="@android:color/holo_blue_light"
    android:padding="20dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome-AppName"
        android:layout_marginTop="0dp"
        android:src="@drawable/logo" />
    <TextView
        android:id="@+id/welcome-AppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appName"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        android:layout_marginTop="35dp"/>


    <Button
        android:id="@+id/btnWelcomeLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:text="@string/giris_yap"
        android:layout_above="@id/btnWelcomeRegister"
        android:layout_marginBottom="25dp"
        />
    <Button
        android:id="@+id/btnWelcomeRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:text="@string/kayit_ol"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        />



</RelativeLayout>