<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ApartmentActivity">

    <include layout="@layout/actionbar_app"
        android:id="@+id/action_barApartment" />

    <Button
        android:id="@+id/btnJoinApartment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Join_Apartment"
        android:layout_below="@+id/action_barApartment"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white" />


    <Button
        android:id="@+id/btnMyApartments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MyApartments"
        android:layout_below="@+id/btnJoinApartment"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white" />


    <Button
        android:id="@+id/btnRegisterApartment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Create_Apartment"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white" />




</RelativeLayout>